spacing fix

--- a/Root/css/accountCreate.css
+++ b/Root/css/accountCreate.css
@@ -33,6 +33,7 @@ input[type=email], input[type=password], input[type=text]{
     height: 45px;
     font-size: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .dropDown{
